feat: add a* search and solving display process

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+  <div style="display: flex; justify-content: space-evenly; max-width: 300px; padding: 0.5rem 0;">
+    <select id="algorithm-selector">
+      <option value="depth">depth first</option>
+      <option value="a*">A*</option>
+    </select>
+
+    <button style="cursor: pointer;">Start</button>
+  </div>
+
+
   <script src="dataStructures.js"></script>
   <script src="game.js"></script>
   <script src="node.js"></script>
